# AI-Accounts

./: .gitignore  FAST-ACCOUNTS-FEATURE-CATALOG.md  README.md  claudeplan.md  render.yaml
Backend/: .cursorrules_backend  .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  dev.bat  pyproject.toml  pytest-out.txt  railway.toml  run_dev.py
Backend/config/: financial_report_ids.json  nafy_parity_exclusions.json  nafy_prod_handoff.json.example  nafy_uat_signoff.json.example
Backend/docs/: AI-ACCOUNTS-PARITY-STATUS.md  DAY-1-OPERATIONS.md  DEPLOY-QUICKSTART.md  FA-FEATURE-MATRIX.csv  FA-FULL-PARITY-IMPLEMENTATION-PLAN.md  FINAL-PARITY-PLAN.md  FINANCIAL-REPORT-IDS.md  GO-LIVE-RUNBOOK.md  GO-LIVE-SIGNOFF-LATEST.md  MIGRATION-sprint-10-tax-lines.sql  MIGRATIONS.md  NAFY-IN-SCOPE-SIGNOFF-LATEST.md  NAFY-RELEASE-READINESS-LATEST.md  NAFY-UAT-CHECKLIST.md  NAFY-UAT-SIGNOFF-LATEST.md  P-ASSISTANT.md  P0-FOUNDATION.md  P1-FOUNDATION.md  P10-FOUNDATION.md  P11-FOUNDATION.md  P12-FOUNDATION.md  P13-FOUNDATION.md  P14-FOUNDATION.md  P15-FOUNDATION.md  P16-FOUNDATION.md  P17-FOUNDATION.md  P18-FOUNDATION.md  P19-FOUNDATION.md  P2-FOUNDATION.md  P20-FOUNDATION.md  P21-FOUNDATION.md  P22-FOUNDATION.md  P23-FOUNDATION.md  P24-FOUNDATION.md  P25-FOUNDATION.md  P26-FOUNDATION.md  P27-FOUNDATION.md  P28-FOUNDATION.md  P29-FOUNDATION.md  P3-FOUNDATION.md  (+44 more)
Backend/prisma/: schema.prisma
Backend/scripts/: apply_p48_onboarding_fixed.sql  apply_p51_p52_migrations.sql  audit_endpoint_sla.py  bench_hot_paths.py  check_assistant_tables.sql  migrate_deploy.py  (+5 more)
(+1198 files in other folders)
