[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "prisma_generated*"]

[project]
name = "fast-accounts-backend"
version = "0.1.0"
description = "FastAPI + Prisma backend for AI-Accounts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "prisma>=0.15.0",
    "httpx>=0.27.0",
    "groq>=0.13.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "fpdf2>=2.8.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
secrets-aws = [
    "boto3>=1.35.0",
]
storage-s3 = [
    "boto3>=1.35.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]
observability = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
